--- a/Assets/Scripts/Editor/MapEditor/MapEditor.uxml
+++ b/Assets/Scripts/Editor/MapEditor/MapEditor.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements">
     <uie:Toolbar style="height: 25px;">
-        <ui:VisualElement style="align-items: stretch; position: relative; flex-direction: row; border-bottom-width: 1px; border-bottom-color: rgb(35, 35, 35); border-top-width: 1px; border-top-color: rgba(35, 35, 35, 255);">
+        <ui:VisualElement style="align-items: stretch; position: relative; flex-direction: row; border-bottom-width: 1px; border-bottom-color: rgb(35, 35, 35); border-top-width: 1px; border-top-color: rgb(35, 35, 35);">
             <uie:ToolbarMenu text="Add" name="add-tower" />
             <uie:ToolbarSpacer />
             <uie:ToolbarButton text="Delete" name="delete-tower" style="left: auto;" />
@@ -8,10 +8,10 @@
     </uie:Toolbar>
     <ui:ListView focusable="true" name="tower-list" style="height: 300px; border-top-width: 0; border-bottom-width: 0; border-bottom-color: rgb(32, 32, 32); min-height: auto; min-width: 200px; padding-left: 3px; padding-right: 3px; padding-top: 3px; padding-bottom: 3px; margin-left: 0;" />
     <uie:Toolbar style="height: 25px;">
-        <ui:VisualElement style="align-items: stretch; position: relative; flex-direction: row; border-bottom-width: 1px; border-bottom-color: rgb(35, 35, 35); border-left-width: 0; border-top-width: 1px; border-top-color: rgba(35, 35, 35, 255);">
-            <uie:ToolbarMenu text="Add" />
+        <ui:VisualElement style="align-items: stretch; position: relative; flex-direction: row; border-bottom-width: 1px; border-bottom-color: rgb(35, 35, 35); border-left-width: 0; border-top-width: 1px; border-top-color: rgb(35, 35, 35);">
+            <uie:ToolbarMenu text="Add" name="add-path" />
             <uie:ToolbarSpacer />
-            <uie:ToolbarButton text="Delete" style="left: auto;" />
+            <uie:ToolbarButton text="Delete" name="delete-path" style="left: auto;" />
         </ui:VisualElement>
     </uie:Toolbar>
     <ui:ListView focusable="true" name="path-list" style="height: 300px; border-top-width: 0; border-bottom-width: 0; border-bottom-color: rgb(32, 32, 32); min-height: auto; min-width: 200px; padding-left: 3px; padding-right: 3px; padding-top: 3px; padding-bottom: 3px; margin-left: 0;" />
